--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "scripts": {
     "build": "vite build",
+    "dev": "vite dev",
     "test": "tsx --test",
     "lint": "prettier --check . && eslint && echo Linting complete!"
   },
@@ -32,16 +33,16 @@
     "@eslint/js": "^9.28.0",
     "@types/angular": "^1.8.9",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.15.30",
-    "@types/react": "^19.1.6",
+    "@types/node": "^24.0.1",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
-    "tsx": "^4.19.4",
+    "tsx": "^4.20.1",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.33.1",
+    "typescript-eslint": "^8.34.0",
     "vite": "^6.3.5",
     "vite-plugin-dts": "^4.5.4"
   },
