--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "react-angularjs-adapter",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Mount AngularJS components in React and vice versa, with support for React contexts",
   "type": "module",
+  "main": "./dist/react-angularjs-adapter.umd.cjs",
+  "module": "./dist/react-angularjs-adapter.js",
+  "types": "./dist/react-angularjs-adapter.d.ts",
   "exports": {
     ".": {
       "types": "./dist/react-angularjs-adapter.d.ts",
@@ -11,7 +14,8 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "react-angularjs-adapter.ts"
   ],
   "scripts": {
     "build": "vite build",
